
CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(LearnOsgEarth)

SET( include_dir "")

set(osgEarth_Root "" CACHE PATH INTERNAL)


#SET(CMAKE_MODULE_PATH "I:\\cp\\osgEarth\\osgearth\\CMakeModules")


SET(CMAKE_MODULE_PATH "${osgEarth_Root}\\CMakeModules")
MESSAGE(  ${CMAKE_MODULE_PATH})
#EXECUTABLE_OUTPUT_PATH
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

#LIBRARY_OUTPUT_PATH
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

FIND_PACKAGE(OpensceneGraph 3.4.0 REQUIRED openThreads osgDB osgUtil osgViewer osg  osgText osgGA)

IF(OPENSCENEGRAPH_FOUND)
	MESSAGE("is openscengraph found:${OPENSCENEGRAPH_FOUND}")
ENDIF()
 find_package(osgViewer)
 find_package(osgText)
 find_package(osgUtil)
 find_package(osgDB)
 find_package(osgGA)
 find_package(osgManipulator)
 find_package(osgVolume)
 find_package(openThreads)
 find_package(osgShadow)
 FIND_PACKAGE(osgFX)
 find_package(OsgEarth)
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/include") 
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OSGEARTH_INCLUDE_DIR})
include_directories(${osgEarth_Root}/src)



LINK_DIRECTORIES(
	${OPENSCENEGRAPH_LIBRARIES_DIRS}
	${OSGDB_LIBRARIES_DIRS}
	${OSGTEXT_LIBRARIES_DIRS}
	${OSGUTIL_LIBRARIES_DIRS}
	${OSGGA_LIBRARIES_DIRS}
	${OSGMANIPULATOR_LIBRARIES_DIRS}
	${OSG_LIBRARIES_DIRS}
	${OPENTHREADS_LIBRARIES_DIRS}
	${OSGSHADOW_LIBRARIES_DIRS}
	${OSGFX_LIBRARIES_DIRS}
	${OSGEARTH_LIBRARIES_DIRS}
	 )
MESSAGE(${OSG_LIBRARIES})
MESSAGE(-----------------------------------)
MESSAGE(${OPENSCENEGRAPH_INCLUDE_DIRS})
MESSAGE(-----------------------------------)
MESSAGE(${OPENSCENEGRAPH_LIBRARIES})
MESSAGE(-----------------------------------)
# MESSAGE( ${OPENTHREADS_LIBRARIES_DIRS} )

MESSAGE("LINK_LIB")
MESSAGE(${OPENSCENEGRAPH_LIBRARIES})

LINK_LIBRARIES(${OPENSCENEGRAPH_LIBRARIES} ${OSGEARTH_LIBRARY} ${OSGEARTHANNOTATION_LIBRARY} ${OSGEARTHFEATURES_LIBRARY} ${OSGEARTHSYMBOLOGY_LIBRARY} ${OSGEARTHUTIL_LIBRARY} )
MESSAGE("osgEarth_include_dir:${OSGEARTH_INCLUDE_DIR}")
MESSAGE("osgEarthLibDir:${OSGEARTH_LIBRARIES_DIRS}")
MESSAGE( "osgEarthlib:${OSGEARTH_LIBRARY}")
MESSAGE( "osgEarthlib:${OSGEARTHANNOTATION_LIBRARY}")
MESSAGE( "osgEarthlib:${OSGEARTHFEATURES_LIBRARY}")
MESSAGE( "osgEarthlib:${OSGEARTHSYMBOLOGY_LIBRARY}")
MESSAGE( "osgEarthlib:${OSGEARTHUTIL_LIBRARY}")

link_libraries(
${OSG_LIBRARIES}
${OSGVIEWER_LIBRARIES}
${OSGDB_LIBRARIES} 
${OSGUTIL_LIBRARIES}
${OSGTEXT_LIBRARIES}
${OSGGA_LIBRARIES}
${OSGMANIPULATOR_LIBRARIES}
${OPENTHREADS_LIBRARIES}
${OSGSHADOW_LIBRARIES}
${OSGFX_LIBRARIES}
 )


# examples
ADD_SUBDIRECTORY(src)
